<resources>
    <string name="app_name">MiPush Framework</string>
    <string name="loading">Please wait…</string>
    <string name="enable">Enable</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="apply">Apply</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="preference_title">Push Config</string>
    <string name="main_event">Logs</string>
    <string name="main_apps">Apps</string>
    <string name="main_settings">Configs</string>
    <string name="msg_enable">Enabled, Push service is ready.</string>
    <string name="msg_disable">Disabled, Apps can\'t receive and register to Push service.</string>
    <string name="action_about">About</string>
    <string name="wizard_descr"><![CDATA[This is an open source project that allows other Android devices to enjoy XiaoMi system-level Push. For more details, visit the GitHub project:<a href="https://github.com/Trumeet/MiPushFramework">MiPushFramework</a>]]></string>
    <string name="wizard_title_check_running">Check the running status.</string>
    <string name="wizard_descr_check_running">Automatically checking if the push service is working properly, which can take up to about twenty seconds.</string>
    <string name="wizard_descr_check_running_ok">Success! Push service is running. You should not need to perform any special operations.</string>
    <string name="wizard_descr_check_running_fail">The check found some issues: Push service was not running. It may be that some of the tools or systems on your device are preventing its startup, and we will try to lift these restrictions next.</string>
    <string name="wizard_title_start_fail">Service start failed</string>
    <string name="service_not_running_faq">
        <![CDATA[
            <b>Please avoid any applications, settings to optimize, prohibit the manager and push service.</b>
            <br /><br /><b>Still have problems?</b>
            <br /><a href="https://github.com/Trumeet/MiPushFramework/issues/">Submit an issue</a>.
        ]]>
    </string>
    <string name="wizard_connect">Connecting</string>
    <string name="wizard_title_run_in_background">Allow running in background</string>
    <string name="wizard_descr_run_in_background">You have disabled the Push service to run in the background, it will not be able to push in the background, you %1$s, then tap Next button.</string>
    <string name="run_in_background_appops_root">Need to use Root access to solve. (we will handle it automatically)</string>
    <string name="run_in_background_rikka_appops"><![CDATA[ need to open <b>App Ops</b> tool, and grant the <b>Run in the background or wake up</b> permissions ]]></string>
    <string name="rikka_appops_help_toast"><![CDATA[
Please grant the <b>Run in the background or wake up</b> permissions.
    ]]></string>
    <string name="wizard_title_stats_permission">Usage stats</string>
    <string name="wizard_title_stats_permission_text">You need to grant "Usage" permission or you will not be able to receive notifications.</string>
    <string name="wizard_descr_finish">Everything is ready.</string>
    <string name="status_ok">OK</string>
    <string name="status_deny_disable">Push disabled</string>
    <string name="status_deny_user">Rejected by you</string>
    <string name="date_just">Just Now</string>
    <plurals name="date_minutes">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>
    <plurals name="date_hours">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <plurals name="date_days">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
    <string name="date_format_normal">%1$s %2$s ago</string>
    <string name="date_format_just">%1$s</string>
    <string name="date_format_long">%1$s</string>
    <string name="action_edit_permission">Edit Permissions</string>
    <string name="permissions">Permissions</string>
    <string name="permission_allow_register">Register push</string>
    <string name="permission_allow_receive">Receive notification message</string>
    <string name="permission_allow_receive_command">Receive command</string>
    <string name="permission_allow_receive_register_result">Receive registration result (not implemented)</string>
    <string name="permission_notification_on_register">Show notification when registering</string>
    <string name="permission_summary_notification_on_register">need to enable global register notification switch in Advance Setting</string>
    <string name="permission_register_type">Register mode</string>
    <string name="register_type_allow">Allow registration, automatic</string>
    <string name="register_type_deny">Block registration</string>
    <string name="register_type_ask">Ask me (Default)</string>
    <string-array name="register_types">
        <item>@string/register_type_ask</item>
        <item>@string/register_type_allow</item>
        <item>@string/register_type_deny</item>
    </string-array>
    <string name="settings_enhance">Enhances</string>
    <string name="settings_service_setting">Push configs</string>
    <string name="settings_service_advance_setting">Advanced</string>
    <string name="settings_summary_service_advance_setting">Advanced configurations interface</string>
    <string name="settings_fake_build">Fake build.prop</string>
    <string name="settings_fake_build_summary">Some apps only try to register to Xiaomi Push when they see the system is XiaoMi MIUI. We can add some keys ​​to build.prop to fake as MIUI and make these applications try to register.</string>
    <string name="settings_check_service">Check the Push service</string>
    <string name="settings_check_service_summary">Check Push service running</string>
    <string name="settings_skip_doze">Remove from battery optimization</string>
    <string name="settings_skip_doze_summary">Battery Optimizer breaks Push service in Android 6.0 or higher.</string>
    <string name="settings_summary_wakeup_target">We will launch the target app when we receive its notification. Disabling this option will prevent some apps from sending notifications again, but some notifications may be missed.</string>
    <string name="settings_debug_icon">Debug Icon</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_get_log">Get debugging logs</string>
    <string name="settings_get_log_summary">Tap to sharing logs file, submit it to your issue if you can.</string>
    <string name="settings_activity_keep_alive">Push KeepAlive</string>
    <string name="settings_summary_keep_alive">Many ROMs (such as OnePlus) have their own background cleanup, but you can adding whitelist through the Lock button of Recent tasks interface. After tapping, find the interface you just opened in the system\'s Recent Tasks and lock it, let the Push running in the background.</string>
    <string name="recent_activity_view">View recent events</string>
    <string name="recent_activity_title">Recent events</string>
    <string name="action_help">Help</string>
    <string name="action_update">Check for update</string>
    <string name="update_toast">You can downloads the latest APKs from the Releases page.</string>
    <string name="application_info_label">App info</string>
    <string name="connect_fail_title_unknown">Unable to connect to Push service</string>
    <string name="connect_fail_title_low_version">Please upgrade Push service</string>
    <string name="connect_fail_title_not_installed">Require Push service installed</string>
    <string name="connect_fail_title_rom">Does not support your ROM</string>
    <string name="connect_fail_doze">Require removed from battery optimization</string>
    <string name="connect_fail_text_unknown"><![CDATA[
    <b>The Manager cannot connect to Push service.</b> Please try to remove the restrictions (such as adding <b>%1$s</b> to whitelist) and try again.
    ]]></string>
    <string name="connect_fail_text_low_version"><![CDATA[
The manager is not compatible with the version of the Push service you are currently using: %1$s. Please <a href="%2$s">Upgrade</a> and try again.
    ]]></string>
    <string name="connect_fail_text_not_installed"><![CDATA[ You also need to install a push.apk, which is a core service running in the background. <a href="%1$s">Install it</a>, then try again.     ]]></string>
    <string name="connect_fail_text_is_miui"><![CDATA[ Sorry, we do not officially support the MIUI ROMs.     ]]></string>
    <string name="help_article_can_not_receive_push">Cannot to receive push</string>
    <string name="help_article_register_error">Registration failed</string>
    <string name="help_article_no_register">Registration list is empty</string>
    <string name="connect_fail_test_se"><![CDATA[
    <b>Insufficient permissions, probably because of an upgrade, please try to reinstall the Manager app without uninstall or clearing data.
    <a href="%1$s">Download it</a>.</b>
    ]]></string>
    <string name="settings_group_notification">Enable notifications grouping</string>
    <string name="settings_summary_group_notification">May consuming battery, turn off if Push service gulp power.</string>
    <string name="about_version">Version %1$s</string>
    <string name="app_registered">Registered</string>
    <string name="app_registered_error">Unregistered</string>
    <string name="request_battery_whitelist">Push app needs to be added to the \"Battery Optimization\" whitelist to run properly.</string>
    <string name="status_app_not_registered">Support but not registered</string>
    <string name="footer_app_ignored_not_registered">%1$s apps without MiPush SDK</string>
    <string name="status_app_not_registered_detail_without_fake_suggest"><![CDATA[
Registration is determined and initiated by the application and generally begins automatically when the application is launched. Some apps are only registered when finding a XiaoMi devices. See also: <b><a href="https://github.com/Trumeet/MiPushFramework/wiki/%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BC%8F%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88">应用程式注册问题解决方案</a></b> and <b><a href="https://github.com/Trumeet/MiPushFramework/wiki/%5B%E5%B8%AE%E5%8A%A9%5D-%E5%BA%94%E7%94%A8%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98">[帮助] 应用注册问题</a></b>.
    ]]></string>
    <string name="status_app_not_registered_detail_with_fake_suggest"><![CDATA[
Registration is determined and initiated by the application and generally begins automatically when the application is launched. Some apps are only registered when finding a XiaoMi devices, you can try <b><a href="https://github.com/Magisk-Modules-Repo/MiPushFake">Magisk global-level module</a></b> or <b><a href="https://github.com/TimothyZhang023/Riru-MiPushFake">Magisk apps-level module</a></b> to increase success. See also: <b><a href="https://github.com/Trumeet/MiPushFramework/wiki/%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BC%8F%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88">应用程式注册问题解决方案</a></b> and <b><a href="https://github.com/Trumeet/MiPushFramework/wiki/%5B%E5%B8%AE%E5%8A%A9%5D-%E5%BA%94%E7%94%A8%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98">[帮助] 应用注册问题</a></b>.
    ]]></string>
    <string name="status_app_not_registered_title">Unregistered</string>
    <string name="fake_enable_title">Fake as XiaoMi Phone</string>
    <string name="fake_global_enable_title">Global fake as XiaoMi Phone</string>
    <string name="fake_enable_detail">Fake the phone to Xiaomi via an Xposed module or Magisk module, enable other applications to registers. (Require Root)</string>
    <string name="fake_enable_detail_not_suggested">Not recommended for this app, it may not work properly.</string>
    <string name="fake_enable_global">Global fake ON</string>
    <string name="helplib_title"><![CDATA[Help & Support]]></string>
</resources>